# zkwork_aleo_protocol

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/environment/: mod.rs
src/message/: mod.rs  poolmessage.rs
