[package]
name = "zkwork_aleo_protocol"
version = "0.3.6"
edition = "2021"
authors = [ "The 6block Aleo Team <zk.work@6block.com>" ]
description = "A protocol lib for aleo pool"
homepage = "https://zk.work/aleo/home"
repository = "https://github.com/6block/zkwork_aleo_protocol"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography" ]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.0"
crossterm = "0.25"

  [dependencies.snarkvm]
  version = "0.9.9"

  [dependencies.anyhow]
  version = "1"

  [dependencies.bincode]
  version = "1.0"

  [dependencies.tokio-util]
  version = "0.7"
  features = [ "codec" ]

  [dependencies.serde]
  version = "1"

  [dependencies.tokio]
  version = "1.21"
  features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time"
  ]

  [dependencies.serde_json]
  version = "1"
  features = [ "arbitrary_precision" ]

  [dependencies.rayon]
  version = "1"

  [dependencies.num_cpus]
  version = "1"

  [dependencies.once_cell]
  version = "1"

#   [dependencies.thiserror]
#   version = "1.0"

  [dependencies.tracing]
  version = "0.1"

  [dependencies.async-trait]
  version = "0.1"

  [dependencies.structopt]
  version = "0.3"

  [dependencies.colored]
  version = "2.0"

  [dependencies.tracing-subscriber]
  version = "0.3"
  features = [ "env-filter", "parking_lot" ]

  [dependencies.rand]
  version = "0.8"
  default-features = false

  [dependencies.snarkvm-algorithms]
  version = "0.9.5"

# [lib]
# name = "zkwork_aleo_protocolxxx"
# path = "src/poolmessage.rs"
